Started the menu, changed several structures

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,9 @@
     "**/.*/**",
     "**/.vscode",
     "**/.vscode/**"
-  ]
+  ],
+  "files.associations": {
+    "string.h": "c"
+  },
+  "C_Cpp.errorSquiggles": "Disabled"
 }
